--- a/src/_scss/_util.scss
+++ b/src/_scss/_util.scss
@@ -50,7 +50,6 @@
 
 .right {
   margin-left: auto;
-  margin-right: 0;
   text-align: right;
 }
 
@@ -82,6 +81,16 @@
 
 .flex {
   display: flex;
+
+  .half {
+    flex: 1;
+  }
+
+  .full {
+    width: 100%;
+    flex-grow: 1;
+    flex-shrink: 0;
+  }
 }
 
 .grid {
